# Build_Project

./: .gitignore  CMakeLists.txt  docker-compose.yml  getGPSData4_Jon.py  go.mod  go.sum  main.go  publisher.py  py_req.txt  run_local.py  sdkconfig  subscriber.py
boat-receiver/main/: .gitignore  CMakeLists.txt  boat_controller.c  header.h  tags.h  wifi_cred.c  wifi_functions.c
firmware/: .gitignore  partitions_ota.csv  platformio.ini
firmware/src/: main.cpp  minmea.c
main/: main.c
mosquitto/: docker-compose.yml
mosquitto/config/: mosquitto.conf  password.txt
server/: NOTES.md  docker-compose.yml
server/mosquitto/config/: mosquitto.conf
server/mosquitto/data/: mosquitto.db
web_publisher/: package-lock.json  package.json  server.js
web_publisher/views/: index.ejs
